<resources>
    <string name="app_name">ITenki</string>
    <string name="appid_weather">ad470c82b413cb03c8a38a020b76561e</string>
    <string name="base_icon_url">http://openweathermap.org/img/w/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="GPSAlertDialogMessage">Press \'Setting\' to enable GPS</string>
    <string name="GPSAlertDialogTitle">Setting GPS</string>
    <string name="check_internet">Check your internet connection!</string>
    <string name="check_data_not_found">Data is not found!</string>
    <string name="btn_detail">Detail</string>
    <string name="btn_seeweather">See Weather</string>
    <string name="txt_wind">Wind</string>
    <string name="txt_pressure">Press</string>
    <string name="txt_humidity">Hum</string>
    <string name="txt_state">State</string>
    <string name="txt_sunrise">Sunrise</string>
    <string name="txt_sunset">Sunset</string>
    <string name="txt_morning">Morning</string>
    <string name="txt_evening">Evening</string>
    <string name="txt_night">Night</string>

    <string name="title_forecast_detail">Forecast Detail</string>
    <string name="title_current_location">Current Location</string>
    <string name="title_select_location">Select City</string>
    <string name="title_selected_city">Selected City</string>
    <string name="title_google_map">Google Map</string>
    <string name="title_setting">Setting</string>
    <string name="title_tenki_note">Tenki Note</string>
    <string name="title_introduction">Introduction</string>
    <string name="title_about">About</string>
    <string name="dialog_data_loading">Data is loading...</string>
    <string name="title_activity_weather_maps">Map</string>

    <string name="txt_enter_address">Enter Address</string>
    <string name="txt_select_exist_city">Select exist city</string>
    <string name="txt_setting_notify">Weather Notification</string>
    <string name="txt_language">Language</string>
    <string name="txt_english">English</string>
    <string name="txt_japan">Japanese</string>
    <string name="txt_title">Title</string>
    <string name="txt_save">Save</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_reload">Reload</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_app_name">App name</string>
    <string name="txt_version">Version: 1.0</string>

    <string name="create_at">Created at</string>
    <string name="modify_at">Modified at</string>
    <string name="alarm_at">Alarm time</string>
    <string name="note_saved">Note saved</string>
    <string name="search">Search</string>
    <string name="set_alarm">Set alarm</string>
    <string name="check_delete">Are you sure want to delete?</string>
    <string name="select_action">Select the action</string>
    <string name="delete_note">Delete note</string>
    <string name="alarm_success">Alarm is set successfully!</string>
    <string name="not_connect">Internet is not connected!</string>
    <string name="input_address">Please input an address!</string>
    <string name="create_note">Create note</string>
    <string name="list_note">List note</string>
    <string name="alarm_note">Alarm note</string>

</resources>
