<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeCurrent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/wpp7">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#50000000"
            android:orientation="vertical"
            android:weightSum="12"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="top"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCurLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/text_size_title_address"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="0.8">
                        <ImageView
                            android:id="@+id/imgIconSky"
                            android:layout_width="100dp"
                            android:layout_height="100dp"

                            android:layout_gravity="center"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1.2">
                        <TextView
                            android:id="@+id/tvTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textSize="@dimen/text_size_big_temp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_marginTop="10dp"
                            android:id="@+id/tvStateMain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textSize="@dimen/text_size_small_temp"
                            />
                        <TextView
                            android:layout_marginTop="5dp"
                            android:id="@+id/tvMaxMinTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textSize="@dimen/text_size_small_temp"
                            />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">
                <LinearLayout
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/weather_detail_icon_size"
                            android:layout_height="@dimen/weather_detail_icon_size"
                            android:src="@drawable/icon_wind_white"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/tvWind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:text="@string/txt_wind"
                            android:textSize="@dimen/weather_detail_text_size"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/weather_detail_icon_size"
                            android:layout_height="@dimen/weather_detail_icon_size"
                            android:src="@drawable/icon_press_white"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/tvPress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:text="@string/txt_pressure"
                            android:textSize="@dimen/weather_detail_text_size"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/weather_detail_icon_size"
                            android:layout_height="@dimen/weather_detail_icon_size"
                            android:src="@drawable/icon_humidity_white"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/tvHumidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:text="@string/txt_humidity"
                            android:textSize="@dimen/weather_detail_text_size"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/weather_detail_icon_size"
                            android:layout_height="@dimen/weather_detail_icon_size"
                            android:src="@drawable/icon_cloud_state64"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/tvState"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:text="@string/txt_state"
                            android:textSize="@dimen/weather_detail_text_size"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/weather_detail_icon_size"
                            android:layout_height="@dimen/weather_detail_icon_size"
                            android:src="@drawable/icon_sunrise_white"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/tvSunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:text="@string/txt_sunrise"
                            android:textSize="@dimen/weather_detail_text_size"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/weather_detail_icon_size"
                            android:layout_height="@dimen/weather_detail_icon_size"
                            android:src="@drawable/icon_sunset_white"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/tvSunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:text="@string/txt_sunset"
                            android:textSize="@dimen/weather_detail_text_size"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff"/>

            <LinearLayout
                android:layout_gravity="bottom"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">
                <!--<Button-->
                    <!--android:id="@+id/btnDetail"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:text="Details"-->
                    <!--android:textSize="16sp"-->
                    <!--android:textAllCaps="false"-->
                    <!--android:background="@drawable/buttonshape"-->
                    <!--android:shadowColor="#A8A8A8"-->
                    <!--android:shadowDx="4"-->
                    <!--android:shadowDy="4"-->
                    <!--android:shadowRadius="5"-->
                    <!--android:minHeight="35dp"-->
                    <!--/>-->
                <Button
                    android:id="@+id/btnDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_detail"
                    style="@style/button"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>

